# Kmeans-OpenMP--Cuda

./: .gitignore  CMakeLists.txt  KMeans_OpenMP2.cpp  KMeans_OpenMP2.h  KMeans_Sequential.cpp  README.md  Test.cpp
src/: KMeans_OpenMP.cpp  KMeans_OpenMP.h  KMeans_OpenMP2.cpp  KMeans_Sequential.cpp  K_Means_Sequential.h  K_means_Cuda.cu  K_means_Cuda.cuh  Point.h  Test.cpp
